# django-cowsay

./: pyproject.toml
cowsay_app/: admin.py  forms.py  models.py  views.py
cowsay_app/migrations/: 0001_initial.py  0002_textitem_time_posted.py  0003_remove_textitem_time_posted.py
cowsay_project/: settings.py  urls.py
templates/: history.html  index.html
