[tool.poetry]
name = "django-cowsay-amandalynnes"
version = "0.1.0"
description = "Django Cowsay"
authors = ["Amanda Simmons <carpe737diem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
